# resqpy

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci-publish.yml  ci-tests.yml  codeql-analysis.yml  update-lockfile.yml
docs/: CONTRIBUTING.rst  conf.py  getting-started.rst  index.rst  installation.rst  release-notes.rst  requirements-extras.txt  requirements.txt  resquirements.txt  trademarks.rst
docs/_static/: theme_overrides.css
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/scripts/: schema.py
docs/tutorial/: attributes_tutorial.rst  cellular_grids.rst  creating_test.rst  getting_started_with_model.rst  grid_properties.rst  high_level_objects.rst  intro_to_resqml.rst  multiprocessing.rst  single_property.rst  surfaces.rst  tutorial_index.rst  units_of_measure.rst  well_basics.rst  working_with_coord.rst  working_with_equinor_pyscal.rst
example_data/: block.epc  block.h5  s_bend.epc  s_bend.h5  tic_tac_toe.epc  tic_tac_toe.h5
resqpy/: __init__.py  base.py  crs.py  demo_file.py  derived_model.py  fault.py  grid.py  grid_surface.py  lines.py  llama.py  model.py  old_surface.py  organize.py  property.py  rq_import.py  strata.py  surface.py  temp-test.py  time_series.py  tomography.py  unstructured.py  weights_and_measures.py  well.py  well.py.orig
resqpy/derived_model/: __init__.py  _add_edges_per_column_property_array.py  _add_faults.py  _add_one_blocked_well_property.py  _add_one_grid_property_array.py  _add_single_cell_grid.py  _add_wells_from_ascii_file.py  _add_zone_by_layer_property.py  _coarsened_grid.py  _common.py  _copy_grid.py  _dm_add_edges_per_column_property_array.py  _dm_add_faults.py  _dm_add_one_grid_property_array.py  _dm_add_wells_from_ascii_file.py  _dm_add_zone_by_layer_property.py  _dm_coarsened_grid.py  _dm_drape_to_surface.py  _dm_extract_box.py  _dm_extract_box_for_well.py  _dm_fault_throw_scaling.py  _dm_gather_ensemble.py  _dm_interpolated_grid.py  _dm_local_depth_adjustment.py  _dm_refined_grid.py  _dm_tilted_grid.py  _dm_unsplit_grid.py  _dm_zonal_grid.py  _dm_zone_layer_ranges_from_array.py  _drape_to_surface.py  _extract_box.py  _extract_box_for_well.py  _fault_throw_scaling.py  _gather_ensemble.py  _interpolated_grid.py  _local_depth_adjustment.py  _refined_grid.py  _tilted_grid.py  _unsplit_grid.py  _zonal_grid.py  (+29 more)
resqpy/fault/: __init__.py  _gcs_functions.py  _grid_connection_set.py
resqpy/grid/: __init__.py  _cell_properties.py  _connection_sets.py  _create_grid_xml.py  _defined_geometry.py  _extract_functions.py  _face_functions.py  _faults.py  _grid.py  _grid_types.py  _moved_functions.py  _pillars.py  _pixel_maps.py  _points_functions.py  _regular_grid.py  _transmissibility.py  _write_hdf5_from_caches.py  _write_nexus_corp.py  _xyz.py  cell_properties.py  connection_sets.py  create_grid_xml.py  defined_geometry.py  extract_functions.py  extract_grid_parent.py  face_functions.py  faults.py  grid.py  grid_functions.py  grid_types.py  intervals_info.py  moved_functions.py  points_functions.py  regular_grid.py  transmissibility.py  write_functions.py  write_hdf5_from_caches.py  write_nexus_corp.py  xyz.py
resqpy/grid_surface/: __init__.py  _blocked_well_populate.py  _find_faces.py  _grid_skin.py  _grid_surface.py  _trajectory_intersects.py  grid_surface_cuda.py
resqpy/lines/: __init__.py  _common.py  _polyline.py  _polyline_set.py  common.py  polyline.py  polyline_set.py
resqpy/model/: __init__.py  _catalogue.py  _context.py  _forestry.py  _grids.py  _hdf5.py  _model.py  _xml.py
resqpy/multi_processing/: __init__.py  _multiprocessing.py
resqpy/multiprocessing/: __init__.py  multiprocessing.py
resqpy/olio/: __init__.py  ab_toolbox.py  attributes.py  base.py  box_utilities.py  class_dict.py  consolidation.py  dataframe.py  exceptions.py  factors.py  fine_coarse.py  grid_functions.py  grid_functions.py.orig  intersection.py  keyword_files.py  load_data.py  numba_compat.py  point_inclusion.py  random_seed.py  read_nexus_fault.py  relperm.py  rq_print.py  simple_lines.py  time.py  trademark.py  transmission.py  triangulation.py  utility.py  uuid.py  vdb.py  vector_utilities.py  volume.py  weights_and_measures.py  wellspec.py  wellspec_keywords.py  write_data.py  write_faults.py  write_hdf5.py  xml_et.py  xml_namespaces.py  (+1 more)
resqpy/organize/: BoundaryFeature.py  EarthModelInterpretation.py  FaultInterpretation.py  FluidBoundaryFeature.py  FrontierFeature.py  GeneticBoundaryFeature.py  GeobodyBoundaryInterpretation.py  GeobodyFeature.py  GeobodyInterpretation.py  GeologicUnitFeature.py  HorizonInterpretation.py  OrganizationFeature.py  OrganizationFeature.py.orig  RockFluidUnitFeature.py  TectonicBoundaryFeature.py  WellboreFeature.py  WellboreInterpretation.py  __init__.py  __init__.py.orig  _utils.py  boundary_feature.py  boundary_feature_interpretation.py  earth_model_interpretation.py  fault_interpretation.py  fluid_boundary_feature.py  frontier_feature.py  generic_interpretation.py  genetic_boundary_feature.py  geobody_boundary_interpretation.py  geobody_feature.py  geobody_interpretation.py  (+13 more)
tests/: conftest.py  conftest.py.orig  test_any_time_series.py  test_base.py  test_blocked_well.py  test_box_utilities.py  test_crs.py  test_dataframe.py  test_derived_model.py  test_deviation_survey.py  test_factors.py  test_fault.py  test_fault_connection_set.py  test_fault_interpretation.py  test_fine_coarse.py  test_grid.py  test_lines.py  test_md_datum.py  test_model.py  test_olio_grid_functions.py  test_olio_utility.py  test_olio_write_data.py  test_olio_write_faults.py  test_organize.py  test_organize.py.orig  test_point_inclusion.py  test_property.py  test_relperm.py  test_resqpy.py  test_rq_import.py  test_s_bend.py  test_strata.py  test_surface.py  test_surface.py.orig  test_surface_pointset.py  test_time_duration.py  test_time_series.py  test_time_series_from_nexus.py  test_timeseries.py  test_tomography.py  (+15 more)
(+285 files in other folders)
