# PEP 517-compliant build configuration

# To build resqpy package, run:
# >>> poetry build

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "resqpy"
version = "0.0.0" # Set at build time
description = "Python API for working with RESQML models"
authors = ["BP"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bp/resqpy"
documentation = "https://resqpy.readthedocs.io/en/latest/"
keywords = ["RESQML"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
include = ["data/*.json"]

[tool.poetry.dependencies]
# Aim to follow NEP29 deprecation policy:
#   - Support all minor versions of Python released in the prior 42 months
#   - Support all minor versions of NumPy/Pandas released in the prior 24 months
#   - https://numpy.org/neps/nep-0029-deprecation_policy.html
# See here for meaning of Semantic Version numbers:
#   - https://semver.org/
# See here for "caret" style dependency specifications:
#   - https://python-poetry.org/docs/dependency-specification/
python = ">= 3.8.1, < 3.12"
numpy = "^1.23"
pandas = "^1.5"
h5py = "^3.7"
lxml = "^4.9"
lasio = "^0.30"
scipy = "^1.9"
numba = ">=0.56, < 1.0"
joblib = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
flake8 = "^6.0"
flake8-docstrings = "^1.6"
yapf = "^0.32"
packaging = "^21.3"
Sphinx = "^5.3"
sphinx-rtd-theme = "^1.1"
mypy = "0.991"
autoclasstoc = "^1.2"
toml = "^0.10.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["resqpy/__init__.py"]

[tool.yapf]
based_on_style = "google"
indent_width = 4
continuation_indent_width = 4
spaces_around_default_or_named_assign = true
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  "venv/**/*",
  "dist/**/*",
  ".venv/**/*",
  ".dist/**/*"
]

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "lasio",
    "h5py",
    "lxml"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
junit_family = "xunit2"
testpaths = "tests/"
filterwarnings = [
    # Error on internal deprecation warnings
    "error::DeprecationWarning:.*resqpy.*",
    # Ignore warnings that are entirely from 3rd party libs outside our control
    "ignore:.*importing the ABCs from 'collections'.*:DeprecationWarning:.*pyreadline.*",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning:.*pywintypes.*"
    ]