# PEP 517-compliant build configuration

# To build resqpy package, run:
# >>> poetry build

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "resqpy"
version = "0.0.0" # Set at build time
description = "Python API for working with RESQML models"
authors = ["BP"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bp/resqpy"
documentation = "https://resqpy.readthedocs.io/en/latest/"
keywords = ["RESQML"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
include = ["data/*.json"]

[tool.poetry.dependencies]
# Aim to follow NEP29 deprecation policy:
#   - Support all minor versions of Python released in the prior 42 months
#   - Support all minor versions of NumPy/Pandas released in the prior 24 months
#   - https://numpy.org/neps/nep-0029-deprecation_policy.html
# See here for meaning of Semantic Version numbers:
#   - https://semver.org/
# See here for "caret" style dependency specifications:
#   - https://python-poetry.org/docs/dependency-specification/
python = ">= 3.10, < 3.15"
numpy = ">= 1.26"
pandas = ">=2.2"
h5py = "^3.7"
lxml = "^6.1"
lasio = ">=0.31"
scipy = ">=1.9"
numba = ">=0.59"
joblib = ">=1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-mock = "^3.10"
ruff = "^0.15"
yapf = "^0.43"
packaging = "^26.2"
Sphinx = "^5.3"
sphinx-rtd-theme = "^1.1"
mypy = "^2.1"
autoclasstoc = "^1.2"
toml = "^0.10.2"
# Type stubs for better type checking
types-lxml = "^2026.2.16"
h5py-stubs = "^0.1.2"
pandas-stubs = {version = "^3.0.3", python = ">=3.11"}
scipy-stubs = {version = "^1.17.1", python = ">=3.11"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["resqpy/__init__.py"]

[tool.yapf]
based_on_style = "google"
indent_width = 4
continuation_indent_width = 4
spaces_around_default_or_named_assign = true
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  "venv/**/*",
  "dist/**/*",
  ".venv/**/*",
  ".dist/**/*"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# error code reference: https://docs.astral.sh/ruff/rules/
select = [
    "F",                         # Pyflakes (logical errors)
    "E101", "W19",               # Indentation (E112/E113 are preview-only in ruff)
    "E71", "E72", "E73", "E74",  # Statements
    "E9",                        # Runtime / syntax errors
    "W60",                       # Deprecation (invalid escape sequences)
    "D",                         # pydocstyle (Google-style docstrings)
]
ignore = [
    "F841",  # local variable assigned but never used: sometimes deliberate
    # pydocstyle exceptions for Google-style docstrings:
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    # Further pydocstyle exceptions for relatively unimportant issues:
    "D202", "D210", "D402", "D405", "D415", "D417",
]

[tool.ruff.lint.per-file-ignores]
# Do not check docstrings for the tests or docs directories.
"tests/*" = ["D"]
"docs/*" = ["D"]
"resqpy/version.py" = ["D"]

[[tool.mypy.overrides]]
# Note: pandas and scipy stubs are not available on python 3.10,
# so mypy should be run on 3.11+ to make full use of 3rd party stubs.
module = [
    "pandas",
    "numpy",
    "lasio",
    "h5py",
    "lxml",
    "numba"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
junit_family = "xunit2"
testpaths = "tests/"
filterwarnings = [
    # Error on internal deprecation warnings
    "error::DeprecationWarning:.*resqpy.*",
    # Ignore warnings that are entirely from 3rd party libs outside our control
    "ignore:.*importing the ABCs from 'collections'.*:DeprecationWarning:.*pyreadline.*",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning:.*pywintypes.*",
    "ignore:.*distutils package is deprecated.*:DeprecationWarning:.*joblib.*",
    ]
