# PEP 517-compliant build configuration

# To build resqpy package, run:
# >>> poetry build

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0,<2.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "resqpy"
description = "Python API for working with RESQML models"
authors = [{name = "BP"}]
readme = "README.md"
license = "MIT"
keywords = ["RESQML"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dynamic = ["version"]
requires-python = ">= 3.10, <3.15"
# Dependencies: aim to follow NEP29 deprecation policy:
#   - Support all minor versions of Python released in the prior 42 months
#   - Support all minor versions of NumPy/Pandas released in the prior 24 months
#   - https://numpy.org/neps/nep-0029-deprecation_policy.html
# (may depart from NEP29 on ad-hoc basis if needed)

# We mostly avoid upper bound caps, as per PyPA guidance, to avoid overly-restrictive
# constraints in shared environments that cannot be overridden by users.
# However, we should add a upper version cap if a newer version is known to be incompatible,
# or if there is a high chance of it being incompatible in the next release.

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "h5py>=3.7",
    "lxml>=5.1",
    "lasio>=0.31",
    "scipy>=1.9",
    "numba>=0.59",
    "joblib>=1.2",
]

[project.urls]
Repository = "https://github.com/bp/resqpy"
Documentation = "https://resqpy.readthedocs.io/en/latest/"

[tool.poetry]
include = ["data/*.json"]
version = "0.0.0"  # Replaced dynamically by poetry-dynamic-versioning

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-mock = "^3.10"
packaging = "^26.2"
# Linting: exact versions controlled in .pre-commit-config.yaml
pre-commit = "*"
ruff = "*"
yapf = "*"
# Type stubs for better type checking
mypy = "^2.1"
types-lxml = ">=2026.2.16"
h5py-stubs = ">=0.1.2"
pandas-stubs = {version = ">=3.0.3", python = ">=3.11"}
scipy-stubs = {version = ">=1.17.1", python = ">=3.11"}

[tool.poetry.group.docs.dependencies]
# Keep consistent with docs/requirements-extras.txt
Sphinx = {version = "==9.1.0", python = ">=3.12"}
autoclasstoc = {version = "==1.7.0", python = ">=3.12"}
sphinx-rtd-theme = {version = "==3.1.0", python = ">=3.12"}

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0,<2.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["resqpy/__init__.py"]

[tool.yapf]
based_on_style = "google"
indent_width = 4
continuation_indent_width = 4
spaces_around_default_or_named_assign = true
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  "venv/**/*",
  "dist/**/*",
  ".venv/**/*",
  ".dist/**/*"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# error code reference: https://docs.astral.sh/ruff/rules/
select = [
    "F",                         # Pyflakes (logical errors)
    "E101", "W19",               # Indentation (E112/E113 are preview-only in ruff)
    "E71", "E72", "E73", "E74",  # Statements
    "E9",                        # Runtime / syntax errors
    "W60",                       # Deprecation (invalid escape sequences)
    "D",                         # pydocstyle (Google-style docstrings)
]
ignore = [
    "F841",  # local variable assigned but never used: sometimes deliberate
    # pydocstyle exceptions for Google-style docstrings:
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    # Further pydocstyle exceptions for relatively unimportant issues:
    "D202", "D210", "D402", "D405", "D415", "D417",
]

[tool.ruff.lint.per-file-ignores]
# Do not check docstrings for the tests or docs directories.
"tests/*" = ["D"]
"docs/*" = ["D"]
"resqpy/version.py" = ["D"]

[[tool.mypy.overrides]]
# Note: pandas and scipy stubs are not available on python 3.10,
# so mypy should be run on 3.11+ to make full use of 3rd party stubs.
module = [
    "pandas",
    "numpy",
    "lasio",
    "h5py",
    "lxml",
    "numba"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
junit_family = "xunit2"
testpaths = "tests/"
filterwarnings = [
    # Error on internal deprecation warnings
    "error::DeprecationWarning:.*resqpy.*",
    # Ignore warnings that are entirely from 3rd party libs outside our control
    "ignore:.*importing the ABCs from 'collections'.*:DeprecationWarning:.*pyreadline.*",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning:.*pywintypes.*",
    "ignore:.*distutils package is deprecated.*:DeprecationWarning:.*joblib.*",
    ]
