[metadata]
name = resqpy
# version = 0.1.0
# author = Example Author
# author_email = author@example.com
description = Python API for working with RESQML files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bp/resqpy
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Topic :: System :: Filesystems
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm[toml]
install_requires = 
    numpy
    pandas
    h5py
    lxml
    lasio

[options.package_data]
# Include resqpy/olio/data/*.json
* = data/*.json

[options.extras_require]
tests =
    pytest
    pytest-cov
    flake8
    mypy
    yapf
docs = 
    sphinx
    sphinx_rtd_theme<1.0.0
    autoclasstoc

[tool:pytest]
addopts = -ra
junit_family = xunit2
testpaths = tests/
filterwarnings =
    # Error on internal deprecation warnings
    error::DeprecationWarning:.*resqpy.*
    # Ignore warnings that are entirely from 3rd party libs outside our control
    ignore:.*importing the ABCs from 'collections'.*:DeprecationWarning:.*pyreadline.*
    ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning:.*pywintypes.*

[flake8]
# count = True
# statistics = True
show_source = True
exclude =  .git, __pycache__, .ipynb_checkpoints
# error code reference: https://gist.github.com/sharkykh/c76c80feadc8f33b129d846999210ba3
select =
    # Logical errors
    F,
    # Indentation
    E101, E112, E113, W19
    # Statements
    E71, E72, E73, E74
    # Runtime
    E9
    # Deprecation
    W60
ignore =
    # F401: "module imported but unused". Ignoring as low-priority
    F401,
    # F841: "local variable is assigned to but never used". Ignoring as sometimes deliberate
    F841

[mypy]
# Ignoring missing types in 3rd party libs
# See https://github.com/python/mypy/issues/3905

[mypy-pandas.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-lasio.*]
ignore_missing_imports = True
[mypy-h5py.*]
ignore_missing_imports = True
[mypy-lxml.*]
ignore_missing_imports = True

[yapf]
based_on_style = google
indent_width = 4
continuation_indent_width = 4
spaces_around_default_or_named_assign = True
column_limit = 120
